unpackaged/main/default/objects/n2de__Member_distributor_detail__c/n2de__Member_distributor_detail__c.object-meta.xml
<CustomObject>
    <description>Team member distributor details</description>
    <label>Member distributor detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member distributor details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>