unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Actual_distribution_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Actual_distribution_sequence__c</fullName>
    <label>Actual distribution sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>