unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Distribution_team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_team_member__c</fullName>
    <label>Distribution team member</label>
    <referenceTo>n2de__Team_member__c</referenceTo>
    <relationshipLabel>Member distributor details</relationshipLabel>
    <relationshipName>Member_distributor_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>