unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Distributor__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>n2de__Distributor__c</referenceTo>
    <relationshipLabel>Member distributor details</relationshipLabel>
    <relationshipName>Member_distributor_details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>