unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Distributor_and_team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_and_team_member__c</fullName>
    <externalId>true</externalId>
    <label>Distributor/team member ids</label>
    <length>37</length>
    <type>Text</type>
</CustomField>