unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Distributor_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_name__c</fullName>
    <formula>n2de__Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor name</label>
    <type>Text</type>
</CustomField>