unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Last_assignment_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_assignment_date__c</fullName>
    <label>Last assignment date</label>
    <type>DateTime</type>
</CustomField>