unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Load_balanced_count__c.field-meta.xml
<CustomField>
    <fullName>n2de__Load_balanced_count__c</fullName>
    <label>Load balanced count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>