unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Rejections_ih__c.field-meta.xml
<CustomField>
    <fullName>n2de__Rejections_ih__c</fullName>
    <label>Rejections ih</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>