unpackaged/main/default/objects/n2de__Member_distributor_detail__c/fields/n2de__Weighting_ih__c.field-meta.xml
<CustomField>
    <fullName>n2de__Weighting_ih__c</fullName>
    <label>Weighting ih</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>